Added FCN ensemble results (FCN pretrain ensembl.csv)

--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -43,9 +43,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['FCN pretrain-cbf',\n 'FCN pretrain-cricket_y',\n 'FCN pretrain-distal_phalanax_tw',\n 'FCN pretrain-distal_phalanx_outline',\n 'FCN pretrain-egg_five_days',\n 'FCN pretrain-electric_devices',\n 'FCN pretrain-face_ucr',\n 'FCN pretrain-fifty_words',\n 'FCN pretrain-gun_point_male_female',\n 'FCN pretrain-gun_point_old_young',\n 'FCN pretrain-large_kitchen_appliances',\n 'FCN pretrain-mote_strain',\n 'FCN pretrain-power_cons',\n 'FCN pretrain-sony_robot',\n 'FCN pretrain-strawberry',\n 'FCN pretrain-swedish_leaf',\n 'FCN pretrain-synthetic_control']"
+      "text/plain": "['cbf',\n 'cricket_y',\n 'distal_phalanax_tw',\n 'distal_phalanx_outline',\n 'egg_five_days',\n 'electric_devices',\n 'face_ucr',\n 'fifty_words',\n 'gun_point_male_female',\n 'gun_point_old_young',\n 'large_kitchen_appliances',\n 'mote_strain',\n 'power_cons',\n 'sony_robot',\n 'strawberry',\n 'swedish_leaf',\n 'synthetic_control']"
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,44 +80,94 @@
     "                       [f\"MLP-{number}\" for number in range(0,10)],\n",
     "                       [f\"Encoder-{number}\" for number in range(0,10)]],\n",
     "             \"FCN pretrain\": FCN_ensemble_names}\n",
-    "csv_name = '../results/FCN.csv'\n",
+    "csv_name = '../results/FCN pretrain ensemble.csv'\n",
     "dataset_names = list(filter(lambda n: n not in [], dataset_names)) # remove electric devices\n",
-    "dataset_names\n",
+    "dataset_names = FCN_dataset_names\n",
     "\n",
-    "FCN_ensemble_names"
+    "FCN_dataset_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'FCN pretrain': ['FCN pretrain-cbf',\n  'FCN pretrain-cricket_y',\n  'FCN pretrain-distal_phalanax_tw',\n  'FCN pretrain-distal_phalanx_outline',\n  'FCN pretrain-egg_five_days',\n  'FCN pretrain-electric_devices',\n  'FCN pretrain-face_ucr',\n  'FCN pretrain-fifty_words',\n  'FCN pretrain-gun_point_male_female',\n  'FCN pretrain-gun_point_old_young',\n  'FCN pretrain-large_kitchen_appliances',\n  'FCN pretrain-mote_strain',\n  'FCN pretrain-power_cons',\n  'FCN pretrain-sony_robot',\n  'FCN pretrain-strawberry',\n  'FCN pretrain-swedish_leaf',\n  'FCN pretrain-synthetic_control']}"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "used_ensembles=ensembles\n",
-    "#used_ensembles=keyfilter(lambda ensemble: ensemble in [\"All\", \"MCDCNN_improved10\"], ensembles)\n",
+    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"FCN pretrain\"], ensembles)\n",
     "used_ensembles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/17:\tcbf\n",
+      "\tFCN pretrain\n",
+      "2/17:\tcricket_y\n",
+      "\tFCN pretrain\n",
+      "3/17:\tdistal_phalanax_tw\n",
+      "\tFCN pretrain\n",
+      "4/17:\tdistal_phalanx_outline\n",
+      "\tFCN pretrain\n",
+      "5/17:\tegg_five_days\n",
+      "\tFCN pretrain\n",
+      "6/17:\telectric_devices\n",
+      "\tFCN pretrain\n",
+      "7/17:\tface_ucr\n",
+      "\tFCN pretrain\n",
+      "8/17:\tfifty_words\n",
+      "\tFCN pretrain\n",
+      "9/17:\tgun_point_male_female\n",
+      "\tFCN pretrain\n",
+      "10/17:\tgun_point_old_young\n",
+      "\tFCN pretrain\n",
+      "11/17:\tlarge_kitchen_appliances\n",
+      "\tFCN pretrain\n",
+      "12/17:\tmote_strain\n",
+      "\tFCN pretrain\n",
+      "13/17:\tpower_cons\n",
+      "\tFCN pretrain\n",
+      "14/17:\tsony_robot\n",
+      "\tFCN pretrain\n",
+      "15/17:\tstrawberry\n",
+      "\tFCN pretrain\n",
+      "16/17:\tswedish_leaf\n",
+      "\tFCN pretrain\n",
+      "17/17:\tsynthetic_control\n",
+      "\tFCN pretrain\n"
+     ]
+    }
+   ],
    "source": [
     "ens_builder = EnsembleBuilder(dataset_names=dataset_names, \n",
     "                              ensembles=used_ensembles, \n",
     "                              verbose=True,\n",
-    "                              models_path=\"../models/without_augmentation/\",\n",
+    "                              models_path=\"../models/FCN transfer_learning/\",\n",
     "                              datasets_path=\"../datasets/\")\n",
     "ens_builder.run_ensembles(augmentation=False).to_csv(csv_name)"
    ]
@@ -129,9 +179,22 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cbf\n",
+      "cricket_y\n",
+      "distal_phalanax_tw\n"
+     ]
+    }
+   ],
    "source": [
     "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
    ]
